--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "debug": "^3.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "fs.promised": "^3.0.0",
     "immutable": "^3.8.2",
     "koa": "^2.5.1",
@@ -63,6 +62,7 @@
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "htmllint-loader": "^2.1.4",
