--- a/package.json
+++ b/package.json
@@ -61,26 +61,20 @@
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
-    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "htmllint-loader": "^2.1.4",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
-    "jest-cli": "^22.4.3",
     "koa-webpack": "^4.0.0",
     "less-loader": "^2.2.2",
     "node-sass": "^4.8.3",
     "nunjucks": "^3.1.2",
     "react-hot-loader": "^4.0.0",
-    "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.2.0",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-middleware": "^3.0.1",
-    "webpack-hot-middleware": "^2.21.2"
+    "webpack-cli": "^2.1.3"
   }
 }
