--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-immutable-render-mixin": "^0.9.7",
     "react-motion": "^0.5.2",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.3.1",
     "sass-mq": "^4.0.2",
     "source-map": "^0.7.2"
   },
@@ -67,7 +68,6 @@
     "htmllint-loader": "^2.1.4",
     "jest": "^22.4.3",
     "koa-webpack": "^4.0.0",
-    "less-loader": "^2.2.2",
     "node-sass": "^4.8.3",
     "nunjucks": "^3.1.2",
     "react-hot-loader": "^4.0.0",
