--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "htmllint-loader": "^2.1.4",
     "jest": "^22.4.3",
     "koa-webpack": "^4.0.0",
+    "koa-webpack-dev-middleware": "^2.0.2",
+    "koa-webpack-hot-middleware": "^1.0.3",
     "node-sass": "^4.8.3",
     "nunjucks": "^3.1.2",
     "react-hot-loader": "^4.0.0",
